# blueflame-ai

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  langgraph.json  pyproject.toml
src/: __init__.py
src/agents/: __init__.py
src/agents/bid_company/: agent.py  prompt.py
src/agents/default/: agent.py  prompt.py
src/agents/weather_agent/: agent.py
src/agents/websearch_assistant/: __init__.py  agent.py
src/common/: __init__.py  config.py  logging_config.py
src/models/: __init__.py  embeddings.py  llms.py
src/tools/: __init__.py  amap_maps.py  antv_visualization_chart.py  aviation.py  bidding_full.py  bidding_tenders.py  bidsearch.py  enterprise_bigdata.py  enterprise_registry.py  enterprise_risk.py  gourmet_guide.py  markmap.py  railway_12306.py  registry.py  supplier_management.py  tendency_software.py  time_tools.py  tool_manager.py  weather.py  web_search.py
