[project]
name = "blueflame-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.8",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.1.13",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "langgraph-cli[inmem]>=0.4.7",
    "pydantic-settings>=2.0.0",
    "mcp>=1.0.0",
]
